# LessonPlan

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Procfile  README.md  implementation_plan.md  lesson_plan.spec  nixpacks.toml  pyproject.toml  requirements-desktop.txt  requirements-dev.txt  task.md
.github/workflows/: ci.yml
assets/: styles.qss
backend/: main.py  requirements.txt
backend/api/: admin.py  auth.py  calendar.py  deps.py  generate.py  holidays.py  syllabus.py  timetable.py
backend/core/: config.py  database.py  security.py
backend/models/: calendar.py  holiday.py  lesson_plan.py  subject.py  timetable.py  user.py
backend/schemas/: admin.py  auth.py  calendar.py  holiday.py  lesson_plan.py  timetable.py
data/: courses.json
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  (+1 more)
src/: __init__.py  calendar_processor.py  course_catalog.py  doc_parser.py  excel_parser.py  export_excel.py  export_pdf.py  export_word.py  file_detector.py  gui.py  image_ocr_parser.py  lesson_generator.py  lesson_plan_format.py  logger.py  main.py  pdf_parser.py  syllabus_parser.py  theme.py  timetable_parser.py  utils.py  widgets.py
templates/: Academic_Calendar_Template.xlsx  Chem Lab.txt  Chem Sub.txt  DS Lab Syllabus.txt  DS Theory Subject Syllabus.txt  Holiday_List_Template.xlsx  Lab_Syllabus_Template.txt  Python Lab Syllabus.txt  Subject_Syllabus_Template.txt  Timetable_Template.xlsx  python Theory Subject Syllabus.txt
tests/: test_calendar_processor.py  test_course_catalog_parser.py  test_export_excel.py  test_export_pdf.py  test_export_word.py  test_file_detector.py  test_lab_lesson_plan.py  test_lesson_generator.py  test_output_naming.py  test_parsed_document_cache.py  test_parser_errors.py  test_signature_layout.py  test_timetable_parser.py
(+18 files in other folders)
