[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-lesson-plan-generator"
dynamic = ["version"]
description = "Desktop lesson-plan generator for engineering faculty using PyQt6"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=2.0,<3",
    "openpyxl>=3.1,<4",
    "python-docx>=1.1,<2",
    "reportlab>=4.0,<5",
    "PyQt6>=6.7,<7",
    "pdfplumber>=0.11,<1",
    "PyPDF2>=3.0,<4",
    "pytesseract>=0.3.10,<1",
    "opencv-python>=4.10,<5",
    "Pillow>=11.0,<13",
    "PyMuPDF>=1.25,<2",
]

[project.scripts]
lesson-plan = "src.main:main"

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["assets/*.png", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
addopts = ["--tb=short", "--strict-markers"]
tmp_path_retention_policy = "failed"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "B905"]

[tool.ruff.lint.per-file-ignores]
"src/gui.py" = ["E402", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["src/gui.py", "src/panels.py", "src/widgets.py", "src/theme.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60
